<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_android_final"
    tools:context=".LoginFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"
        >

        <ImageView
            android:layout_width="84dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo_gch" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Golden Church"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="110dp"
            android:translationY="-30dp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Una casa para toda tu familia"
            android:textColor="#000000"
            android:textSize="10sp"
            android:textStyle="bold"
            android:translationX="110dp"
            android:translationY="-40dp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Salmos 121:8"
            android:textColor="#000000"
            android:textSize="13sp"
            android:textStyle="bold"
            android:translationX="130dp"
            android:translationY="-30dp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="167dp"
            android:layout_height="31dp"
            android:layout_marginTop="10dp"
            android:text="Jehová guardará tu salida y tu entrada desde ahora y para siempre."
            android:textColor="#000000"
            android:textSize="10sp"
            android:textStyle="bold"
            android:translationX="90dp"
            android:translationY="-40dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_username"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/password_text_imput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_password"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_fiber_pin_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/galeria_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/button_next"
                android:textColor="@color/black"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@+id/galeria_button"
                android:layout_toLeftOf="@+id/galeria_button"
                android:text="@string/button_cancel"
                android:textColor="@color/black" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
